# react-native-worklet

./: CONTRIBUTING.md  LICENSE  README.md  beletsky-react-native-worklet.podspec  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/beletsky/reactnativeworklet/: ReactNativeWorkletModule.kt  ReactNativeWorkletPackage.kt
cpp/: beletsky-react-native-worklet.cpp  beletsky-react-native-worklet.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/beletsky/reactnativeworklet/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/ReactNativeWorkletExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeWorkletExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeWorkletExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeWorkletExample.xcscheme
example/ios/ReactNativeWorkletExampleTests/: ReactNativeWorkletExampleTests.m
example/src/: App.tsx
ios/: ReactNativeWorklet.h  ReactNativeWorklet.mm
src/: index.tsx
